--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,36 @@
-# This is a basic workflow to help you get started with Actions
+name: Build TDLib
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  build-linux:
+    runs-on: ubuntu-22.04
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: setup
+        run: sudo apt-get install -y make zlib1g-dev libssl-dev gperf php-cli cmake clang libc++-dev libc++abi-dev
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: build
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          cd third_party/td
+          rm -rf build && mkdir build && cd build
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH=../tdlib ..
+          cmake --build . --target prepare_cross_compiling
+          cmake --build . --target install
+
+      - name: pack
+        run: cd third_party/td/tdlib/lib && zip libtdjson.zip libtdjson.so && mv libtdjson.zip ../../../..
+
+      - name: GH Release
+        uses: softprops/action-gh-release@v2.4.1
+        if: github.ref_type == 'tag'
+        with:
+          files: libtdjson.zip
