--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: setup
         run: sudo apt-get install -y make zlib1g-dev libssl-dev gperf php-cli cmake clang libc++-dev libc++abi-dev
