--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,10 +41,13 @@ jobs:
           CC: /usr/bin/clang
           CXX: /usr/bin/clang++
           CXXFLAGS: -stdlib=libc++
-        run: cmake -GNinja -B build -S third_party/td -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=0 -DTD_GENERATE_SOURCE_FILES=0
+        run: cmake -GNinja -B build -S third_party/td -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
 
       - name: Build TDLib
-        run: cmake --build build --target tdjson -j$(nproc)
+        run: |
+          cd build
+          cmake --build . --target prepare_cross_compiling -j$(nproc)
+          cmake --build . --target tdjson -j$(nproc)
 
       - name: Install / Package
         run: |
