--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         include:
           - platform: linux
             arch: x86_64
-            os: ubuntu-latest
+            os: ubuntu-22.04
 
     steps:
       - name: Checkout repository
