--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,10 @@ jobs:
         if: runner.os == 'Linux'
         run: sudo apt-get install -y make zlib1g-dev libssl-dev gperf cmake php-cli ninja-build clang libc++-dev libc++abi-dev
 
-      - name: Setup Android NDK
-        if: matrix.platform == 'android'
+      - id: setup-ndk
+        name: Setup Android NDK
         uses: nttld/setup-ndk@v1.5.0
+        if: matrix.platform == 'android'
         with:
           ndk-version: r21e
           add-to-path: false
