--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Configure & build BoringSSL
         if: matrix.platform == 'android'
-        run: cmake -GNinja -B build-boringssl -S third_party/boringssl
+        run: cmake -Wno-deprecated -GNinja -B build-boringssl -S third_party/boringssl
           -DBUILD_TESTING=OFF
           -DBUILD_SHARED_LIBS=OFF
           -DFUZZ=OFF
@@ -79,7 +79,7 @@ jobs:
 
       - name: Configure build (Android)
         if: matrix.platform == 'android'
-        run: cmake -GNinja -B build -S third_party/td
+        run: cmake -Wno-deprecated -GNinja -B build -S third_party/td
           -DOPENSSL_FOUND=TRUE
           -DOPENSSL_INCLUDE_DIR=$(realpath third_party/boringssl/include)
           -DOPENSSL_CRYPTO_LIBRARY=$(realpath build-boringssl/libcrypto.a)
@@ -99,8 +99,10 @@ jobs:
       - name: Build TDLib (Android)
         if: matrix.platform == 'android'
         run: |
-          cmake --build build --target tdjson -j$(nproc)
-          ${ANDROID_NDK}/toolchains/llvm/prebuilt/linux-${{ runner.arch }}/bin/llvm-strip --strip-debug --strip-unneeded build/libtdjson.so -o build/libtdjson.so
+          cd build
+          cmake --build . --target prepare_cross_compiling -j$(nproc)
+          cmake --build . --target tdjson -j$(nproc)
+          ${ANDROID_NDK}/toolchains/llvm/prebuilt/linux-${{ runner.arch }}/bin/llvm-strip --strip-debug --strip-unneeded libtdjson.so -o libtdjson.so
 
       - name: Install / Package
         run: |
