--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,7 +131,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tdlib-${{ matrix.platform }}-${{ matrix.arch }}
-          path: artifacts
+          path: artifacts/**/*
 
   release:
     needs: build
@@ -142,7 +142,7 @@ jobs:
       - name: Download all build artifacts
         uses: actions/download-artifact@v4
         with:
-          path: release-assets
+          path: release-assets/
 
       - name: Extract version from one artifact
         id: version
