Fixes artifact directory name in archive step
Corrects the working directory from '.github' to 'artifacts' during the binary archiving process to prevent errors when accessing build outputs.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,7 +149,7 @@ jobs:
       - name: Archive binaries
         run: |
           mkdir release
-          cd .github
+          cd artifacts
           for dir in */; do
             if [ -d "$dir" ]; then
               cd "${dir}"
